@@ -9,7 +9,7 @@ redbaron>=0.6.3
 keyring>=10.2
 keyrings.alt>=2.0
 PyCrypto>=2.6.1
-slackclient>=1.0.9
+slackclient>=2.3.1;python_version>='3.6'
 sshtunnel>=0.1.2
 requests>=2.0
 PyTango>=9.0.0
